--- a/public/index.html
+++ b/public/index.html
@@ -91,7 +91,7 @@ their sizes.
       }
       /* Handle on hover */
       ::-webkit-scrollbar-thumb:hover {
-        background: #54d6eb;
+        background: #035cdd;
       }
     </style>
 
